right_sidebar: Highlight search icon when hovering userlist_header.
Previously there was no cue that clicking the userlist_header area
would open the user filter, this commit adds a highlight to the search
icon.
Fixes: #14931.

--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -182,6 +182,11 @@
         opacity: 0.5;
         margin-right: 5px;
     }
+
+    &:hover > #user_filter_icon {
+        opacity: 1;
+        cursor: pointer;
+    }
 }
 
 #keyboard-icon {
