style: Change outline color of close button at notifications header.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -276,6 +276,10 @@ p.n-margin {
             right: 18px;
             top: 50%;
             transform: translateY(-50%);
+
+            &:focus {
+                outline: hsl(200, 100%, 25%) solid 5px;
+            }
         }
 
         .alert-link {
