postcss_vars: Use underscore to follow better naming convention.

--- a/static/styles/lightbox.css
+++ b/static/styles/lightbox.css
@@ -253,7 +253,7 @@
     }
 }
 
-@media only screen and (min-width: $ms-min) and (max-width: $md-max) {
+@media only screen and (min-width: $ms_min) and (max-width: $md_max) {
     #lightbox_overlay {
         .image-actions {
             float: left;
