--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -16,7 +16,7 @@
                 line-height: 1em;
             }
 
-            @media (min-width: $sm-min) {
+            @media (min-width: $sm_min) {
                 display: none;
             }
         }
@@ -33,7 +33,7 @@
             display: none;
         }
 
-        @media (max-width: $sm-max) {
+        @media (max-width: $sm_max) {
             .compose_stream_button,
             .compose_private_button {
                 display: none;
@@ -497,20 +497,20 @@ a#undo_markdown_preview {
 }
 
 /* This max-width must be synced with message_viewport.is_narrow */
-@media (max-width: $xl-max) {
+@media (max-width: $xl_max) {
     .compose-content {
         margin-right: 7px;
     }
 }
 
-@media (max-width: $md-max) {
+@media (max-width: $md_max) {
     .compose-content {
         margin-right: 7px;
         margin-left: 7px;
     }
 }
 
-@media (max-width: $mm-max) {
+@media (max-width: $mm_max) {
     #stream_message_recipient_topic.recipient_box {
         width: calc(100% - 175px);
         min-width: 95px;
