--- a/static/styles/right_sidebar.css
+++ b/static/styles/right_sidebar.css
@@ -196,7 +196,7 @@
 }
 
 /* This max-width must be synced with message_viewport.is_narrow */
-@media (max-width: $xl-max) {
+@media (max-width: $xl_max) {
     #sidebar-keyboard-shortcuts {
         /* This is supposed to fix this appearing improperly in narrow
         windows.  It's likely the wrong solution; a proper fix likely
@@ -210,14 +210,14 @@
     }
 }
 
-@media (max-width: $md-max) {
+@media (max-width: $md_max) {
     #user_search_section .user-list-filter {
         /* input should be 100% - 6px padding x2 - 1px border x2. */
         width: calc(100% - 12px - 2px);
     }
 }
 
-@media (max-width: $sm-max) {
+@media (max-width: $sm_max) {
     #userlist-toggle {
         height: 30px;
         line-height: 30px;
