--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1761,7 +1761,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     margin: 20px;
 }
 
-@media (max-width: $lg-max) {
+@media (max-width: $lg_max) {
     .user-avatar-section,
     .realm-icon-section {
         float: none;
@@ -1784,7 +1784,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
 
 /* This value needs to match with the same in subscriptions.css, as
    we have some shared styles declared there */
-@media (max-width: $md-max) {
+@media (max-width: $md_max) {
     #settings_overlay_container {
         /* this variable allows JavaScript to detect this media query */
         --single-column: yes;
@@ -1878,7 +1878,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media only screen and (max-width: $lg-max) {
+@media only screen and (max-width: $lg_max) {
     /* Show bot-information-box at full width on small
        screen sizes. Not having this media query breaks the
        information box */
