--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2896,7 +2896,7 @@ select.inline_select_topic_edit {
     }
 }
 
-@media only screen and (min-width: 300px) and (max-width: 700px) {
+@media (max-width: $md_max) {
     #feedback_container {
         width: calc(90% - 30px);
         left: 5%;
