--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1862,7 +1862,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media (max-width: 450px) {
+@media (max-width: $ml_max) {
     #api_key_buttons,
     #download_zuliprc {
         flex-direction: column;
