settings: Use sm_max for adjusting settings for small width devices.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -1829,7 +1829,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: $sm_max) {
     #pw_strength {
         margin: auto;
     }
