media_query: Use 1199px instead of 1165px as xl breakpoint.
We use 1199px for hiding right column.

The components changed here were tested to be working fine.

This change is not likely to introduce any regression as the
calculations in the components here were not dependent upon the
breakpoint being at 1165px.

--- a/static/styles/compose.css
+++ b/static/styles/compose.css
@@ -497,7 +497,7 @@ a#undo_markdown_preview {
 }
 
 /* This max-width must be synced with message_viewport.is_narrow */
-@media (max-width: 1165px) {
+@media (max-width: $xl-max) {
     .compose-content {
         margin-right: 7px;
     }
