--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -2600,7 +2600,7 @@ select.inline_select_topic_edit {
 }
 
 /* This max-width must be synced with message_viewport.is_narrow */
-@media (max-width: 1165px) {
+@media (max-width: $xl-max) {
     .app-main,
     .header-main {
         min-width: 750px;
