email: Set an envelope-from which may be different from the From: field.
The envelope-from is used by the MTA if the destination address is not
deliverable.  Route all such mail to the noreply address.

--- a/templates/zerver/email.html
+++ b/templates/zerver/email.html
@@ -1,3 +1,6 @@
+{% if from_email != envelope_from %}
+<h4>Envelope-From: {{ envelope_from }}</h4>
+{% endif %}
 <h4>From: {{ from_email }}</h4>
 {% if reply_to %}
 <h4>Reply To:
