--- a/static/styles/informational_overlays.css
+++ b/static/styles/informational_overlays.css
@@ -89,7 +89,7 @@
         white-space: nowrap;
         background-color: hsl(0, 0%, 98%);
         color: hsl(0, 0%, 20%);
-        margin: 0 0.1em;
+        margin: 0.25em 0.1em;
         padding: 0.1em 0.4em;
         text-shadow: 0 1px 0 hsl(0, 0%, 100%);
         /* Prevent selection */
@@ -109,7 +109,7 @@
 
     td:not(.definition) {
         text-align: left;
-        white-space: nowrap;
+        white-space: normal;
         font-weight: bold;
 
         :not(kbd) {
