alertwords: Fix css in static/styles/settings.css.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -78,7 +78,7 @@ h3 .fa-question-circle-o {
         #pw_strength {
             width: 140px;
             height: 8px;
-            margin: 6px 0 0 0;
+            margin: 6px 0 0;
         }
     }
     .button {
@@ -231,7 +231,7 @@ td .button {
     .settings-section-title {
         font-size: 1.4em;
         font-weight: 500;
-        margin: 10px 0 10px 0;
+        margin: 10px 0;
 
         &.transparent {
             background-color: transparent;
@@ -269,7 +269,7 @@ td .button {
                 display: inline-block;
                 position: absolute;
                 padding-top: 3px;
-                font: normal normal normal 12px/1 FontAwesome;
+                font: normal normal normal 12px / 1 FontAwesome;
                 font-size: inherit;
             }
 
@@ -400,7 +400,7 @@ td .button {
 
 .button,
 .input-group {
-    margin: 0 0 20px 0;
+    margin: 0 0 20px;
 }
 
 .input-group {
@@ -432,7 +432,7 @@ input[type="checkbox"] {
     }
 
     .inline-block {
-        margin: -2px 0 0 0;
+        margin: -2px 0 0;
     }
 }
 
@@ -484,6 +484,14 @@ input[type="checkbox"] {
 #download_attachment {
     padding-left: 0;
     border-left: 0;
+}
+
+.alert-word {
+    width: 80%;
+}
+
+.alert-word.delete {
+    width: 10%;
 }
 
 .alert-word-information-box {
@@ -620,8 +628,7 @@ input[type="checkbox"] {
 #account-settings-status {
     text-align: center;
     width: 50%;
-    margin: auto;
-    margin-bottom: 20px;
+    margin: auto auto 20px;
 }
 
 .add-new-emoji-box,
@@ -691,7 +698,7 @@ input[type="checkbox"] {
 
 #admin-filter-pattern-status,
 #admin-filter-format-status {
-    margin: 20px 0 0 0;
+    margin: 20px 0 0;
 }
 
 .progressive-table-wrapper {
@@ -857,7 +864,7 @@ input[type="checkbox"] {
     }
 
     .buttons {
-        margin: 10px 0 5px 0;
+        margin: 10px 0 5px;
     }
 }
 
@@ -908,9 +915,22 @@ input[type="checkbox"] {
 #alert_words_list {
     margin: 0;
 
+    .alert-word-information-box {
+        min-width: 98%;
+        float: left;
+    }
+
+    .edit-alert-word-buttons {
+        float: left;
+    }
+
+    .remove-alert-word {
+        position: absolute;
+        margin-top: 0.5%;
+    }
+
     li {
         list-style-type: none;
-
         &.alert-word-item:first-child {
             background: none;
             margin-top: 8px;
@@ -918,7 +938,6 @@ input[type="checkbox"] {
     }
 
     .alert_word_listing .value {
-        display: block;
         word-wrap: break-word;
         word-break: break-all;
         white-space: normal;
@@ -928,9 +947,7 @@ input[type="checkbox"] {
 #alert_words_list,
 #attachments_list {
     .edit-attachment-buttons {
-        position: absolute;
-        right: 20px;
-        top: 0;
+        display: inline-block;
     }
 }
 
@@ -945,7 +962,7 @@ input[type="checkbox"] {
 
     label {
         border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
-        padding: 8px 0 10px 0;
+        padding: 8px 0 10px;
 
         &:last-of-type {
             border-bottom: none;
@@ -1191,7 +1208,7 @@ input[type="checkbox"] {
 
     input.search {
         font-size: 0.9rem;
-        margin: 10px 0 20px 0;
+        margin: 10px 0 20px;
     }
 
     .form-sidebar {
@@ -1318,7 +1335,7 @@ input[type="checkbox"] {
             .icon {
                 width: 18px;
                 height: 18px;
-                margin: 10px 10px;
+                margin: 10px;
                 text-align: center;
 
                 font-size: 1.4em;
@@ -1778,7 +1795,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 
     .subsection-failed-status p {
-        margin: 5px 0 0 0;
+        margin: 5px 0 0;
     }
 }
 
@@ -1844,10 +1861,8 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
         display: block;
         width: 120px;
         padding: 0;
-        padding-top: 0;
         text-align: center;
         margin: auto;
-        float: none;
     }
 
     #filter-settings .new-filter-form .controls,
@@ -1858,7 +1873,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
 
     #settings_page .save-button-controls {
         display: block;
-        margin: 10px 0 0 0;
+        margin: 10px 0 0;
     }
 }
 
@@ -1870,7 +1885,7 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
     }
 }
 
-@media only screen and (max-width: $lg_max) {
+@media only screen and(max-width: $lg_max) {
     /* Show bot-information-box at full width on small
        screen sizes. Not having this media query breaks the
        information box */
