REMOVED Inline styling from alert_word_settings_item.hbs

--- a/static/templates/settings/alert_word_settings_item.hbs
+++ b/static/templates/settings/alert_word_settings_item.hbs
@@ -5,7 +5,7 @@
             <span class="value">{{word}}</span>
         </div>
     </div>
-    <div class="edit-alert-word-buttons" style="float: left">
+    <div class="edit-alert-word-buttons">
         <button type="submit" class="button small btn-danger remove-alert-word" title="{{t 'Delete alert word' }}" data-word="{{word}}">
             <i class="fa fa-trash-o" aria-hidden="true"></i>
         </button>
