(FIX) Fixed typo in css

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -913,9 +913,11 @@ input[type="checkbox"] {
         float: left;
     }
 
-    .edit-alert-words-buttons{
+    .edit-alert-word-buttons{
         float: left;
     }
+
+
 
     .remove-alert-word {
         position: absolute;
