--- a/static/third/bootstrap/css/bootstrap.css
+++ b/static/third/bootstrap/css/bootstrap.css
@@ -2497,7 +2497,7 @@ legend + .control-group {
 .nav > li > a:hover,
 .nav > li > a:focus {
   text-decoration: none;
-  background-color: #eeeeee;
+  background-color: hsla(0, 0%, 0%, 0.2);
 }
 .nav > li > a > img {
   max-width: none;
