copy_button: Fix weird black and white background.
The weird colours are coming from bootstarp.
Likely a regression from the bootstrap upgrade.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -445,6 +445,11 @@ li,
     icon is clickable and is needed because of reduced
     opacity of readonly textarea */
     z-index: 2;
+    background: transparent;
+
+    &:hover {
+        background: transparent;
+    }
 
     &:hover svg path {
         fill: hsl(200, 100%, 40%);
