api docs: Cleaned up CSS for parameter classes.
Deduplicated CSS classes of data types of response and
request parameters in API Documentation to use a single
class.

--- a/static/styles/portico/portico.css
+++ b/static/styles/portico/portico.css
@@ -1693,6 +1693,12 @@ label.label-title {
         }
     }
 
+    .api-field-type {
+        text-transform: lowercase;
+        font-weight: 600;
+        font-size: 14px;
+    }
+
     .api-argument-example-label {
         font-style: italic;
     }
@@ -1717,16 +1723,9 @@ label.label-title {
         font-size: 12px;
         color: hsl(0, 50%, 60%);
     }
-
-    .api-argument-datatype {
-        text-transform: lowercase;
-        font-weight: 600;
-        font-size: 14px;
-        color: hsl(176, 46.4%, 41%);
-    }
 }
 
-.api-response-datatype {
+.api-field-type {
     color: hsl(176, 46.4%, 41%);
 }
 
