frontend: Fix right margin in stream description.
This commits gives a right margin to the stream description
so that it does not collide with the icon on its right and
also become better visually appealing.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -712,6 +712,7 @@ form#add_new_subscription {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            margin-right: 12px;
         }
 
         .top-bar .subscriber-count,
