left_sidebar: Correct the "topics_header" text.
The topics_header section shows incorrect text when click on
"more topics". The text displays "ALL STREAMS" while that should
be "ALL TOPICS". To fix this, this commit corrects the text
followed by its class to match it with the text.

--- a/static/styles/left_sidebar.css
+++ b/static/styles/left_sidebar.css
@@ -450,7 +450,7 @@ li.expanded_private_message {
     }
 }
 
-.show-all-streams {
+.show-all-topics {
     a {
         color: hsl(0, 0%, 20%);
     }
