--- a/static/styles/rendered_markdown.css
+++ b/static/styles/rendered_markdown.css
@@ -138,7 +138,7 @@
     }
 
     .alert-word {
-        background-color: #b5f799;
+        background-color: hsl(109.7,44.2%,38.6%);
     }
 
     /* Timestamps */
