recent_topics: Don't revive focus when user is trying to type.

--- a/templates/zerver/app/navbar.html
+++ b/templates/zerver/app/navbar.html
@@ -31,7 +31,7 @@
                         <form id="searchbox_form" class="form-search navbar-search">
                             <div id="search_arrows" class="input-append">
                                 <span class="search_icon search_open" ><i class="fa fa-search" aria-hidden="true"></i></span>
-                                <input class="search-query input-block-level" id="search_query" type="text" placeholder="{{ _('Search') }}"
+                                <input class="search-query input-block-level home-page-input" id="search_query" type="text" placeholder="{{ _('Search') }}"
                                   autocomplete="off" aria-label="{{ _('Search') }}" title="{{ _('Search') }} (/)"/>
                                 <button class="btn search_button" type="button" id="search_exit" aria-label="{{ _('Exit search') }}"><i class="fa fa-remove" aria-hidden="true"></i></button>
                             </div>
