docs: Update contributor and developer documentation counts.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -346,8 +346,8 @@
                 <h1>Open source.</h1>
                 <p>
                     Zulip is <a href="https://github.com/zulip/zulip">100% open source software</a>,
-                    built by a vibrant community of hundreds of developers
-                    from all around the world.  With 120,000 words of
+                    built by a vibrant community of over 700 developers
+                    from all around the world.  With 160,000 words of
                     <a href="https://zulip.readthedocs.io/">developer documentation</a>,
                     a high quality code base, and a
                     <a href="https://zulip.readthedocs.io/en/latest/contributing/chat-zulip-org.html">welcoming community</a>,
