Rename "Add streams" to "Subscribe to more streams" in left-sidebar.

--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -84,7 +84,7 @@
                 <ul id="stream_filters" class="filters"></ul>
                 {% if show_add_streams %}
                 <div id="add-stream-link">
-                    <a href="#streams/all"><i class="fa fa-plus-circle" aria-hidden="true"></i>{{ _('Add streams') }}</a>
+                    <a href="#streams/all"><i class="fa fa-plus-circle" aria-hidden="true"></i>{{ _('Subscribe to more streams') }}</a>
                 </div>
                 {% endif %}
             </div>
