code_cleanup: Merge two divs into one.

--- a/static/templates/recent_topic_row.hbs
+++ b/static/templates/recent_topic_row.hbs
@@ -9,10 +9,8 @@
     </td>
     <td class="recent_topic_name">
         <div class="flex_container">
-            <div class="left_part">
-                <div class="recent_topics_focusable">
-                    <a href="{{topic_url}}">{{topic}}</a>
-                </div>
+            <div class="left_part recent_topics_focusable">
+                <a href="{{topic_url}}">{{topic}}</a>
             </div>
             <div class="right_part">
                 {{#if unread_count}}<span class="recent_topic_unread_count">{{unread_count}}</span>{{/if}}
