dependencies: Upgrade Source Sans Pro font to Source Sans 3.
https://blog.adobe.com/en/2020/11/30/whats-new-in-source-sans-3.html

Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/static/styles/portico/archive.css
+++ b/static/styles/portico/archive.css
@@ -1,6 +1,5 @@
 body {
-    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial,
-        sans-serif;
+    font-family: "Source Sans 3", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
 }
 
