--- a/static/styles/portico/landing_page.css
+++ b/static/styles/portico/landing_page.css
@@ -2175,7 +2175,7 @@ nav {
 
     font-size: 0.8rem;
     font-weight: 600;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: "Source Sans 3", sans-serif;
     margin-top: 10px;
 }
 
