--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -323,7 +323,7 @@ html {
         vertical-align: top;
         padding: 13px 22px 13px 22px;
 
-        font-family: "Source Sans Pro";
+        font-family: "Source Sans 3";
 
         font-size: 1.2rem;
         font-weight: 400;
@@ -404,7 +404,7 @@ html {
             padding: 10px 32px 10px 12px;
             margin: 25px 0 5px;
 
-            font-family: "Source Sans Pro";
+            font-family: "Source Sans 3";
             font-size: 1.2rem;
             line-height: normal;
             height: auto;
