--- a/static/styles/app_components.css
+++ b/static/styles/app_components.css
@@ -473,7 +473,7 @@
         display: inline;
         margin-right: 8px;
 
-        font-family: FontAwesome, Yantramanav, "Source Sans Pro";
+        font-family: FontAwesome, Yantramanav, "Source Sans 3";
         font-weight: 600;
     }
 }
