--- a/static/styles/portico/stats.css
+++ b/static/styles/portico/stats.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Source Sans Pro", "Helvetica Neue", sans-serif !important;
+    font-family: "Source Sans 3", "Helvetica Neue", sans-serif !important;
     background-color: hsl(0, 0%, 98%);
 }
 
@@ -113,7 +113,7 @@ p {
 }
 
 .button {
-    font-family: "Source Sans Pro", "Helvetica Neue", sans-serif !important;
+    font-family: "Source Sans 3", "Helvetica Neue", sans-serif !important;
     border: none;
     border-radius: 4px;
     outline: none;
