tippy: Set default font size to 12px.
The default font size for tippy before was 14px appears large
for a tooltip compared to rest of the content.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -514,6 +514,10 @@ strong {
     display: inline;
 }
 
+.tippy-content {
+    font-size: 12px;
+}
+
 .tooltip {
     &.in {
         font-size: 12px;
