user_list_title: Use consistent tooltip text for user search.
Make the text for tooltip on search icon and header same.

--- a/templates/zerver/app/right_sidebar.html
+++ b/templates/zerver/app/right_sidebar.html
@@ -2,7 +2,7 @@
     <div class="right-sidebar-items">
         <div id="user-list">
             <div id="userlist-header">
-                <h4 class='sidebar-title tippy-zulip-tooltip' id='userlist-title' data-tippy-content="{{ _('Filter users') }}">{{ _('USERS') }}</h4>
+                <h4 class='sidebar-title tippy-zulip-tooltip' id='userlist-title' data-tippy-content="{{ _('Filter users') }} (w)">{{ _('USERS') }}</h4>
                 <i id="user_filter_icon" class='fa fa-search tippy-zulip-tooltip' aria-hidden="true" aria-label="{{ _('Filter users') }}" data-tippy-content="{{ _('Filter users') }} (w)"></i>
             </div>
             <div class="input-append notdisplayed" id="user_search_section">
