message_view_header: Remove not used tooltip dataset.
We certainly don't need a tooltip for narrow description.

--- a/static/templates/message_view_header.hbs
+++ b/static/templates/message_view_header.hbs
@@ -5,7 +5,7 @@
 <a class="sub_count no-style tippy-zulip-tooltip" data-tippy-content="{{sub_count_tooltip_text}}" href="{{stream_settings_link}}">
     <i class="fa fa-user-o"></i>{{formatted_sub_count}}
 </a>
-<span class="narrow_description rendered_markdown" data-toggle="tooltip">
+<span class="narrow_description rendered_markdown">
     {{#if rendered_narrow_description}}
     {{rendered_markdown rendered_narrow_description}}
     {{else}}
