compose_mobile_button: Use tippyjs for tooltip.
There are several benefits of using tippyjs here:
* Removes dependency on bootstrap.
* We don't have to manually handle show/hide of popover.
* There cannot be any memory leak since we don't store
  the instance.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -1,3 +1,13 @@
+/* Extend light-border theme of tippyjs
+ * here.
+ */
+.tippy-box[data-theme~='light-border'] {
+    .tippy-content {
+        font-size: 14px;
+        padding: 5px 0;
+    }
+}
+
 .popover {
     width: auto;
     max-width: 100%;
